--- a/index.html
+++ b/index.html
@@ -21,13 +21,14 @@
         body{
             background-color: lightBlue;
             align-items: center;
+            width: 100%;
         }
 
         header{
             width: 100%;
             border-bottom: solid 3px #486980;
             height: 60px;
-            font-size: 250%;
+            font-size: 40px;
             justify-content: center;
             align-items: center;
             display: flex;
@@ -122,6 +123,7 @@
     </section>
 
 </body>
+
 
 
 </html>
