--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         header{
             width: 100%;
             border-bottom: solid 3px #486980;
-            height: 60px;
+            height: auto;
             font-size: 40px;
             justify-content: center;
             align-items: center;
@@ -127,3 +127,4 @@
 
 
 </html>
+
