--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         }
 
         header{
-            width: 100%;
+            width: auto;
             border-bottom: solid 3px #486980;
             height: auto;
             font-size: 40px;
@@ -127,4 +127,5 @@
 
 
 </html>
+
 
