--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         body{
             background-color: lightBlue;
             align-items: center;
-            width: 100%;
+            max-width: 400px;
         }
 
         header{
@@ -127,6 +127,7 @@
 
 
 </html>
+
 
 
 
