--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
         body{
             background-color: lightBlue;
             align-items: center;
-            max-width: 400px;
+            width: 100%;
+            justify-content: center;
+            align-items: center;
+            display: flex;
         }
 
         header{
@@ -127,6 +130,7 @@
 
 
 </html>
+
 
 
 
