--- a/index.html
+++ b/index.html
@@ -31,9 +31,7 @@
             border-bottom: solid 3px #486980;
             height: auto;
             font-size: 40px;
-            justify-content: center;
-            align-items: center;
-            display: flex;
+            text-align: center;
             color: rgb(72, 105, 128);
         }
 
@@ -129,6 +127,7 @@
 
 
 </html>
+
 
 
 
