--- a/index.html
+++ b/index.html
@@ -35,6 +35,14 @@
             color: rgb(72, 105, 128);
         }
 
+        #carousel-section{
+            width: 50%;
+        }
+
+        #video-section{
+            width: 70%;
+        }
+
        #note{
             margin: 40px auto;
             width: 35%;
@@ -127,6 +135,7 @@
 
 
 </html>
+
 
 
 
