--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
     <header>Happy 53rd Birthday Papa</header>
 
-    <section id="carousel-section" style="margin: 40px auto; max-width: 500px; align-items: center; justify-content: center; display: flex; flex-direction: column;">
+    <section id="carousel-section" style="margin: 40px auto; align-items: center; justify-content: center; display: flex; flex-direction: column;">
         <h2 style="color:#486980; font-size:2em; margin-bottom:20px; font-weight:700; text-align:center; letter-spacing:2px;">Memories</h2>
         <div style="display: flex; align-items: center; justify-content: center;">
             <button id="prevBtn" style="font-size:3em; background:none; border:none; cursor:pointer; color: #486980;">&#8592;</button>
@@ -118,7 +118,7 @@
         };
     </script>
 
-    <section id="video-section" style="margin: 40px auto 0 auto; max-width: 400px; text-align: center;">
+    <section id="video-section" style="margin: 40px auto 0 auto; text-align: center;">
         <h2 style="color:#486980; font-size:2em; margin-bottom:20px; font-weight:700; text-align:center; letter-spacing:2px;">Special Video</h2>
         <video id="birthdayVideo" width="350" height="250" controls style="border-radius:10px; border:5px solid #486980; background:#eaf6fb;">
             <source src="videos/papa.mp4" type="video/mp4">
@@ -135,6 +135,7 @@
 
 
 </html>
+
 
 
 
