--- a/index.html
+++ b/index.html
@@ -74,18 +74,35 @@
         }
         @media (max-width: 600px) {
             header {
-                font-size: 1.3em;
-                height: 45px;
+                font-size: 1.1em;
+                height: 40px;
+            }
+            #carousel-section, #video-section {
+                max-width: 99vw;
+                width: 99vw;
+                margin: 20px auto;
+                padding: 0;
             }
             #carousel-section h2, #video-section h2 {
-                font-size: 1.3em;
+                font-size: 1.1em;
+                margin-bottom: 12px;
             }
             #prevBtn, #nextBtn {
-                font-size: 2em;
+                font-size: 1.5em;
+            }
+            #carouselImg {
+                max-width: 98vw;
+                width: 98vw;
+            }
+            #video-section video {
+                max-width: 98vw;
+                width: 98vw;
             }
             #note {
-                font-size: 1em;
-                padding: 12px;
+                font-size: 0.95em;
+                padding: 8px;
+                max-width: 98vw;
+                width: 98vw;
             }
         }
     </style>
