--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <h2 style="color:#486980; font-size:2em; margin-bottom:20px; font-weight:700; text-align:center; letter-spacing:2px;">Memories</h2>
         <div style="display: flex; align-items: center; justify-content: center;">
             <button id="prevBtn" style="font-size:3em; background:none; border:none; cursor:pointer; color: #486980;">&#8592;</button>
-            <img id="carouselImg" src="images/test.png" alt="Birthday Photo" style="width:60%; height:40%; object-fit:cover; border-radius:10px; border:5px solid #486980; margin:0 20px;">
+            <img id="carouselImg" src="images/good.png" alt="Birthday Photo" style="width:60%; height:40%; object-fit:cover; border-radius:10px; border:5px solid #486980; margin:0 20px;">
             <button id="nextBtn" style="font-size:3em; background:none; border:none; cursor:pointer; color: #486980;">&#8594;</button>
         </div>
         <div id="carouselLabel" style="margin-top:15px; font-size:1.2em; color:#486980; font-weight:500; min-height:2em; text-align:center;"></div>
@@ -75,28 +75,28 @@
 
     <script>
         const images = [
-            'images/test.png',
-            'images/test2.png',
-            'images/test.png',
-            'images/test2.png',
-            'images/test.png',
-            'images/test2.png',
-            'images/test.png',
-            'images/test2.png',
-            'images/test.png',
-            'images/test2.png'
+            'images/good.png',
+            'images/image2.png',
+            'images/babyvishwa.png',
+            'images/cruise.png',
+            'images/futuredubai.png',
+            'images/image1.png',
+            'images/image3.png',
+            'images/liberty.png',
+            'images/image4.png',
+            'images/test.png'
         ];
         const labels = [
-            'Papa blowing out candles',
-            'Family dinner at home',
-            'Papa opening presents',
-            'Picnic at the park',
-            'Papa and grandkids laughing',
-            'Birthday cake moment',
-            'Papa telling stories',
-            'Group photo with friends',
-            'Papa making a toast',
-            'Silly hat memory'
+            'Papa being handsome.',
+            'Papa looking over the Niagara Falls',
+            'Papa with baby Vishwa.',
+            'Mamma and Papa on the cruise.',
+            'Papa in the Museum of the Future in Dubai.',
+            'Deva and Papa at a Miami Heat Game.',
+            'Papa looking at the Niagara Falls.',
+            'Papa and Mamma at the top of the Statue of Liberty.',
+            'Papa at the top of the Burj Khalifa.',
+            'Birthday cake for Papa.'
         ];
         let current = 0;
         const img = document.getElementById('carouselImg');
@@ -133,6 +133,7 @@
 
 
 </html>
+
 
 
 
