--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     <section id="video-section" style="margin: 40px auto 0 auto; text-align: center;">
         <h2 style="color:#486980; font-size:2em; margin-bottom:20px; font-weight:700; text-align:center; letter-spacing:2px;">Special Video</h2>
         <video id="birthdayVideo" width=60% height=40% controls style="border-radius:10px; max-width: 400px; border:5px solid #486980; background:#eaf6fb;">
-            <source src="images/vishwavideo.mov" type="video/mov">
+            <source src="images/vishwavideo.MOV" type="video/MOV">
             Your browser does not support the video tag.
         </video>
     </section>
@@ -137,6 +137,7 @@
 
 
 </html>
+
 
 
 
